--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "Cypress - EC",
+  "name": "estrategia",
   "version": "1.0.0",
-  "description": "Esse projeto faz referência ao teste técnico do Estratégia Concursos.",
+  "description": "Esse projeto segue as instruções do teste técnico do Estratégia Concursos.",
   "main": "index.js",
   "scripts": {
-    "open": "npm cypress open",
-    "run": "npm cypress run"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DougDMO/estrategia.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "cypress": "^8.3.0"
-  }
+  "bugs": {
+    "url": "https://github.com/DougDMO/estrategia/issues"
+  },
+  "homepage": "https://github.com/DougDMO/estrategia#readme"
 }
